--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,6 @@
     <string name="nav_home">Home</string>
     <string name="nav_order">Orders</string>
     <string name="nav_notification">Notification</string>
-    <string name="nav_person">Personal</string>
+    <string name="nav_person">DhakaSetup</string>
 
 </resources>
