--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
 
-    <string name="app_name">Dhaka Setup</string>
+    <string name="app_name">Customer App</string>
     <string name="FACEBOOK_APP_ID">184823412237565</string>
     <string name="ACCOUNT_KIT_CLIENT_TOKEN">2b2df2a3df6b6918641d60b7c47db8da</string>
     <string name="nav_home">Home</string>
     <string name="nav_order">Orders</string>
     <string name="nav_notification">Notification</string>
-    <string name="nav_person">DhakaSetup</string>
+    <string name="nav_person">My Profile</string>
     <string name="bdt">৳</string>
 
     <!-- TODO: Remove or change this placeholder text -->
